# mdw

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROJECT_CONTEXT.md  README.md  test.d2
.github/workflows/: release.yml
examples/d2/: bidirectional.d2  connection.d2  diamond.d2  helloworld.d2  labels.d2  shape.d2
examples/json/: array.json  nested.json  simple.json
examples/markmap/: basic.md  fenced_block.md  nested.md
examples/md/: code.md  command.md  footnotes.md  headings.md  lists.md  mermaid_and_d2.md  test.md  unicode.md
examples/mermaid/: class_diagram.mermaid  flowchart_TD.mermaid  gantt.mermaid  graph_LR.mermaid  graph_TD.mermaid  graph_TD_2.mermaid  seqeuence_diagram.mermaid
examples/mm/: basic.mm  fenced_block.md  learning_rust.mm  node_shapes.mm  software_architecture.mm
examples/yaml/: demo.yaml
scripts/: generate-formula.sh  install.sh  test-screenshots.sh
src/: app.rs  config.rs  content.rs  d2.rs  event.rs  file_tree.rs  image_loader.rs  main.rs  markdown.rs  markmap.rs  mermaid.rs  mindmap.rs  specstory.rs  syntax_highlight.rs  ui.rs  watcher.rs
