[package]
name = "mdw"
version = "0.1.0"
edition = "2024"
description = "A terminal markdown file viewer with live reload"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
pulldown-cmark = "0.13.0"
notify = "8.0.0"
notify-debouncer-mini = "0.7.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
color-eyre = "0.6"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"

